--- a/airs/content/blog/hit-miss/index.adoc
+++ b/airs/content/blog/hit-miss/index.adoc
@@ -43,7 +43,7 @@ Suppose we want to estimate the batting average
 for a particular player.
 One way to do so would be to look at their
 link:https://en.wikipedia.org/wiki/Moving_average[rolling average],
-i.e. his average so far. The
+i.e., his average so far. The
 link:https://www.probabilisticworld.com/law-large-numbers/[law of large numbers]
 tells us that no matter what happens at the beggining,
 the rolling average will tend to the true value,
