--- a/airs/content/pages/products/rules/list/authorization/096/index.adoc
+++ b/airs/content/pages/products/rules/list/authorization/096/index.adoc
@@ -4,7 +4,7 @@
 :keywords: Access Control, Privileges, ASVS, CAPEC, CWE, HIPAA, NERC, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R096. Set user required privileges
+= R096. Set users' required privileges
 
 == Requirement
 
@@ -13,8 +13,8 @@ who will access the system must be defined.
 
 == Description
 
-Systems should usually have a set of roles with different levels of
-privilege for accessing resources.
+Systems should have a set of roles with different levels
+of privilege to access resources.
 The privileges of each role must be clearly defined and the role of each user
 should also be clearly stated.
 
