--- a/airs/content/pages/products/rules/list/credentials/133/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/133/index.adoc
@@ -27,7 +27,7 @@ alphabet used (lower case letters, upper case letters, numbers, symbols, etc.)
 and the maximum length of the password.
 
 . [[r2]] link:http://capec.mitre.org/data/definitions/560.html[CAPEC-560: Use of Known Domain Credentials].
-An adversary guesses or obtains (i.e. steals or purchases) legitimate
+An adversary guesses or obtains (i.e., steals or purchases) legitimate
 credentials (e.g., userID/password) to achieve authentication and to perform
 authorized actions under the guise of an authenticated user or service.
 
