--- a/airs/content/pages/products/rules/list/cryptography/224/index.adoc
+++ b/airs/content/pages/products/rules/list/cryptography/224/index.adoc
@@ -184,10 +184,10 @@ and block modes are configured securely using the latest advice.
 
 . [[r28]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.2 Algorithms.(6.2.5)]
-Verify that known insecure block modes (i.e. *ECB*, etc.), padding modes
-(i.e. **PKCS#1** v1.5, etc.), ciphers with small block sizes
-(i.e. **Triple-DES**, *Blowfish*, etc.), and weak hashing algorithms
-(i.e. *MD5*, *SHA1*, etc.) are not used unless required for backwards
+Verify that known insecure block modes (i.e., *ECB*, etc.), padding modes
+(i.e., **PKCS#1** v1.5, etc.), ciphers with small block sizes
+(i.e., **Triple-DES**, *Blowfish*, etc.), and weak hashing algorithms
+(i.e., *MD5*, *SHA1*, etc.) are not used unless required for backwards
 compatibility.
 
 . [[r29]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
