--- a/airs/content/pages/products/rules/findings/hygiene/068/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/068/index.adoc
@@ -1,5 +1,5 @@
 :slug: products/rules/findings/068/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities arising from setting an insecure session expiration time, recommendations to avoid them and related security requirements.
+:description: In this case, the finding presents information about vulnerabilities arising from setting an insecure session expiration time.
 :keywords: Session, Expiration, Time, Inactivity, Expiry, Login
 :findings: yes
 :type: hygiene
@@ -12,4 +12,4 @@ User sessions do not expire after 5 minutes of inactivity.
 
 == Rules
 
-. [[r1]] [inner]#link:/products/rules/list/023/[R023. Terminate inactive users sessions]#
+. [[r1]] [inner]#link:/products/rules/list/023/[R023. Terminate inactive user sessions]#
