--- a/airs/content/pages/products/rules/list/architecture/266/index.adoc
+++ b/airs/content/pages/products/rules/list/architecture/266/index.adoc
@@ -121,10 +121,10 @@ especially if client-side access control is present and could be bypassed.
 
 . [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.2 Algorithms.(6.2.5)]
-Verify that known insecure block modes (i.e. *ECB*, etc.), padding modes
-(i.e. **PKCS#1** v1.5, etc.), ciphers with small block sizes
-(i.e. **Triple-DES**, *Blowfish*, etc.), and weak hashing algorithms
-(i.e. *MD5*, *SHA1*, etc.) are not used unless required for backwards
+Verify that known insecure block modes (i.e., *ECB*, etc.), padding modes
+(i.e., **PKCS#1** v1.5, etc.), ciphers with small block sizes
+(i.e., **Triple-DES**, *Blowfish*, etc.), and weak hashing algorithms
+(i.e., *MD5*, *SHA1*, etc.) are not used unless required for backwards
 compatibility.
 
 . [[r15]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
