--- a/airs/content/pages/products/rules/list/authentication/237/index.adoc
+++ b/airs/content/pages/products/rules/list/authentication/237/index.adoc
@@ -101,7 +101,7 @@ application.
 V11.1 Business Logic Security Requirements.(11.1.2)]
 Verify the application will only process business logic flows with all steps
 being processed in realistic human time,
-i.e. transactions are not submitted too quickly.
+i.e., transactions are not submitted too quickly.
 
 . [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V11.1 Business Logic Security Requirements.(11.1.8)]
