--- a/airs/content/pages/products/rules/list/authorization/035/index.adoc
+++ b/airs/content/pages/products/rules/list/authorization/035/index.adoc
@@ -12,8 +12,8 @@ The system must not allow system actors to modify privileges for themselves.
 
 == Description
 
-Systems should usually have a set of roles with different levels of
-privilege for accessing resources.
+Systems should have a set of roles with different levels
+of privilege to access resources.
 The privileges of each role must be clearly defined and the role of each user
 should also be clearly stated.
 Furthermore, users should not be allowed to modify their own privileges,
