--- a/airs/content/pages/products/rules/list/authorization/095/index.adoc
+++ b/airs/content/pages/products/rules/list/authorization/095/index.adoc
@@ -13,8 +13,8 @@ privileges must be defined.
 
 == Description
 
-Systems should usually have a set of roles with different levels of
-privilege for accessing resources.
+Systems should have a set of roles with different levels
+of privilege to access resources.
 The privileges of each role must be clearly defined and the role of each user
 should also be clearly stated.
 That includes the set of users that will have administrator or root privileges,
