--- a/airs/content/pages/products/rules/list/credentials/332/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/332/index.adoc
@@ -32,7 +32,7 @@ If the password chosen by the user was a word within the dictionary,
 this attack will be successful (in the absence of other mitigations).
 
 . [[r2]] link:http://capec.mitre.org/data/definitions/560.html[CAPEC-560: Use of Known Domain Credentials].
-An adversary guesses or obtains (i.e. steals or purchases) legitimate
+An adversary guesses or obtains (i.e., steals or purchases) legitimate
 credentials (e.g., userID/password) to achieve authentication and to perform
 authorized actions under the guise of an authenticated user or service.
 
